docs: estruturação da apresentação

--- a/index.html
+++ b/index.html
@@ -10,6 +10,36 @@
     <title>OJPBRAGA</title>
 </head>
 <body>
-    
+    <header>
+        <h1>OJPBRAGA</h1>
+        <div id="header-div-container">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+    </header>
+
+    <section id="presentation">
+
+        <div id="div-container">
+            <div id="div-texts">
+                <h1>Olá! Eu sou o João</h1>
+                <h1>João</h1> 
+                <!-- FrontEnd será criado usando before -->
+                <p>Se for um site específico que foi lançado após recomendaria procurar mecanismo de busca ou em comunidades.</p>
+            </div>
+            <div id="div-profile">
+                <div id="div-background">
+                    <img src="" alt="">
+                </div>
+            </div>
+        </div>
+
+        <div id="div-scroll">
+            <img src="" alt="">
+        </div>
+
+    </section>
+
 </body>
 </html>
