--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
             <div id="div-carousel-container">
               <div class="carousel-item carousel-item-1" data-index="1"></div>
-              <div class="carousel-item carousel-item-2" data-index="2"></div>
+              <div class="carousel-item carousel-item-2 active" data-index="2"></div>
               <div class="carousel-item carousel-item-3" data-index="3"></div>
               <div class="carousel-item carousel-item-4" data-index="4"></div>
             </div>
