--- a/index.html
+++ b/index.html
@@ -206,15 +206,15 @@
 
         
         <div id="div-container">
-          <div id="div-title">
+          <div id="div-title" class="title-active">
             <h1>PROJETOS</h1>
           </div>
           <!-- Carrosel aqui -->
           <div id="div-carousel">
 
             <div id="div-carousel-container">
-              <div class="carousel-item carousel-item-1" data-index="1"></div>
-              <div class="carousel-item carousel-item-2 active" data-index="2"></div>
+              <div class="carousel-item carousel-item-1 active" data-index="1"></div>
+              <div class="carousel-item carousel-item-2" data-index="2"></div>
               <div class="carousel-item carousel-item-3" data-index="3"></div>
               <div class="carousel-item carousel-item-4" data-index="4"></div>
             </div>
