fix & feat: footer

--- a/index.html
+++ b/index.html
@@ -329,20 +329,20 @@
           <div id="div-container">
 
             <div class="div-links">
-              <h2>Titulo</h2>
+              <h2>Sessões</h2>
               <ul>
-                <a href=""><li>Teste</li></a>
-                <a href=""><li>Teste</li></a>
-                <a href=""><li>Teste</li></a>
+                <a href=""><li>Apresentação</li></a>
+                <a href=""><li>Sobre Mim</li></a>
+                <a href=""><li>Projetos</li></a>
               </ul>
             </div>
 
             <div class="div-links">
-              <h2>Titulo</h2>
+              <h2>Contato</h2>
               <ul>
-                <a href=""><li>Teste</li></a>
-                <a href=""><li>Teste</li></a>
-                <a href=""><li>Teste</li></a>
+                <a href=""><li>Email</li></a>
+                <a href=""><li>LinkedIn</li></a>
+                <a href=""><li>GitHub</li></a>
               </ul>
             </div>
 
