feat: dark mode

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <div id="vertical-bar"></div>
         <div id="div-imgs-2">
-          <a href=""><img src="./assets/img/sun-solid_light.svg" alt="" /></a>
+          <img id="button-switch-theme" src="./assets/img/sun-solid_light.svg" alt="" />
         </div>
       </div>
     </header>
