--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <script src="./js/script.js" defer></script>
 
     <!-- Animação profile: reativar -->
-    <script type="module" defer>
+    <!-- <script type="module" defer>
       import { ShaderArt } from 'https://esm.sh/shader-art';
       import { UniformPlugin } from 'https://esm.sh/@shader-art/plugin-uniform';
       
       ShaderArt.register([() => new UniformPlugin()]);
-    </script>
+    </script> -->
 
     <script src="./js/profile-background.js" defer></script>
     <script src="./js/projects-carousel.js" defer></script>
@@ -47,7 +47,7 @@
         </div>
         <div id="vertical-bar"></div>
         <div id="div-imgs-2">
-          <img id="button-switch-theme" src="./assets/img/sun-solid_light.svg" alt="" />
+          <img id="button-switch-theme" src="./assets/img/moon.svg" alt="" />
         </div>
       </div>
     </header>
