fix: button theme change

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" class="dark-mode">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -47,7 +47,7 @@
         </div>
         <div id="vertical-bar"></div>
         <div id="div-imgs-2">
-          <img id="button-switch-theme" src="./assets/img/moon.svg" alt="" />
+          <img id="button-switch-theme" src="./assets/img/sun-solid_light.svg" alt="" />
         </div>
       </div>
     </header>
