fix: pseudo element

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       <footer>
   
         <div id="contact">
-          <h1>Deseja entrar em <span>contato?</span></h1>
+          <h1>Deseja entrar em <br><span>contato?</span></h1>
           <div id="button">
             <h3>CLIQUE</h3>
 
