--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </div>
 
           <div id="div-profile">
-              <img src="./assets/img/jp.svg" alt="" />
+              <video src="./assets/img/avatar.mp4" autoplay></video>
           </div>
         </div>
 
