feat: profile picture

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </div>
 
           <div id="div-profile">
-              <video src="./assets/img/avatar.mp4" autoplay></video>
+              <video src="./assets/img/avatar.mp4" autoplay loop></video>
           </div>
         </div>
 
@@ -170,7 +170,7 @@
 
           <div id="div-profile">
             <div id="div-background">
-              <img src="./assets/img/jp.svg" alt="">
+              <img src="./assets/img/jp.png" alt="">
             </div>
             <div id="div-technologies">
               <p>HTML</p>
