fix: video play

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </div>
 
           <div id="div-profile">
-              <video src="./assets/img/avatar.mp4" autoplay loop></video>
+              <video src="./assets/img/avatar.mp4" autoplay loop muted="true"></video>
           </div>
         </div>
 
