--- a/index.html
+++ b/index.html
@@ -173,9 +173,14 @@
               <img src="./assets/img/jp.png" alt="">
             </div>
             <div id="div-technologies">
-              <p>HTML</p>
-              <p>CSS</p>
+              <p>HTML5</p>
+              <p>CSS6</p>
+              <p>SASS</p>
               <p>JS</p>
+              <p>FIGMA</p>
+              <p>JAVA</p>
+              <p>PHP</p>
+              <p>MySQL</p>
             </div>
           </div>
 
@@ -206,7 +211,7 @@
 
         
         <div id="div-container">
-          <div id="div-title" class="title-active">
+          <div id="div-title" class="title-active" style="display: none;">
             <h1>PROJETOS</h1>
           </div>
           <!-- Carrosel aqui -->
