fix: title projects

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
         
         <div id="div-container">
-          <div id="div-title" class="title-active" style="display: none;">
+          <div id="div-title" class="title-active">
             <h1>PROJETOS</h1>
           </div>
           <!-- Carrosel aqui -->
