--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       <h1>OJPBRAGA</h1>
       <div id="header-div-container">
         <div id="div-imgs-1">
-          <a href=""><img src="./assets/img/github-light.svg" alt="" /></a>
-          <a href=""><img src="./assets/img/linkedin_light.svg" alt="" /></a>
+          <a href="http://www.github.com/ojpbraga"><img src="./assets/img/github-light.svg" alt="" /></a>
+          <a href="http://www.linkedin.com/in/ojpbraga"><img src="./assets/img/linkedin_light.svg" alt="" /></a>
         </div>
         <div id="vertical-bar"></div>
         <div id="div-imgs-2">
@@ -61,8 +61,8 @@
             <h2>Olá! Eu sou</h2>
             <h1 id="h1-name" class="gradient-sensitive">João</h1>
             <p>
-              Se for um site específico que foi lançado após recomendaria
-              procurar mecanismo de busca ou em comunidades.
+              📍Belo Horizonte, MG. Desenvolvedor FrontEnd e UI Design, com experiência em HTML, CSS, SASS, JavaScript (ES6), Figma, 
+              Java, Git / GitHub, Python e MySQL, caminhando rumo a ReactJS e TypeScript.
             </p>
           </div>
 
@@ -185,7 +185,7 @@
 
           <h1 class="gradient-sensitive" id="about-me-title">Quem sou eu?</h1>
 
-          <p id="about-me-text">Se for um site específico que foi lançado após recomendaria procurar mecanismo de busca ou em comunidades.</p>
+          <p id="about-me-text">Meu nome é João Pedro Oliveira Braga, tenho 18 anos e atualmente sou estudante de Análise e Desenvolvimento de Sistemas, com foco em FrontEnd. Desenvolvo minhas próprias interfaces utilizando o Figma e as construo.</p>
          
 
         </div>
@@ -215,7 +215,7 @@
           <div id="div-carousel">
 
             <div id="div-carousel-container">
-              <div class="carousel-item carousel-item-1 active" data-index="1"></div>
+              <div class="carousel-item carousel-item-1 active" data-index="1">Em andamento</div>
               <div class="carousel-item carousel-item-2" data-index="2"></div>
               <div class="carousel-item carousel-item-3" data-index="3"></div>
               <div class="carousel-item carousel-item-4" data-index="4"></div>
