--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           <div id="div-carousel">
 
             <div id="div-carousel-container">
-              <div class="carousel-item carousel-item-1 active" data-index="1">Em andamento</div>
+              <div class="carousel-item carousel-item-1 active" data-index="1">Em andamento, projetos disponíveis no repositório do GitHub</div>
               <div class="carousel-item carousel-item-2" data-index="2"></div>
               <div class="carousel-item carousel-item-3" data-index="3"></div>
               <div class="carousel-item carousel-item-4" data-index="4"></div>
