--- a/index.html
+++ b/index.html
@@ -5,20 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Style -->
     <link rel="stylesheet" href="./sass/style.css" />
-    <!-- JS -->
-    <script src="./js/script.js" defer></script>
 
+    <!-- JS -->
+    <script type="module" src="./js/script.js" defer></script>
     <!-- Animação profile: reativar -->
-    <!-- <script type="module" defer>
+    <script type="module" defer>
       import { ShaderArt } from 'https://esm.sh/shader-art';
       import { UniformPlugin } from 'https://esm.sh/@shader-art/plugin-uniform';
       
       ShaderArt.register([() => new UniformPlugin()]);
-    </script> -->
-
-    <script src="./js/profile-background.js" defer></script>
-    <script src="./js/projects-carousel.js" defer></script>
-    <script src="./js/projects-background.js" defer></script>
+    </script>
 
     <!-- Fonts -->
     <link
