--- a/index.html
+++ b/index.html
@@ -260,15 +260,14 @@
 
               </div>
 
-
               <div class="carousel-item carousel-item-2" data-index="2">
 
                 <div class="item-container-text">
 
                   <div class="container-text">
                     <div class="container-title">
-                      <img src="./assets/img/carousel-mouse.svg" alt="">
-                      <h1>Mouse Cursor</h1>
+                      <img src="./assets/img/doctor-paciente-critico.svg" alt="">
+                      <h1>PACIENTE CRITICO</h1>
                     </div>
   
                     <p>Se for um site específico que foi lançado após recomendaria procurar mecanismo de busca ou em comunidades.</p>
@@ -298,8 +297,12 @@
               </div>
 
               </div>
-              <div class="carousel-item carousel-item-3" data-index="3"></div>
-              <div class="carousel-item carousel-item-4" data-index="4"></div>
+              <div class="carousel-item carousel-item-3" data-index="3">
+              </div>
+
+              <div class="carousel-item carousel-item-4" data-index="4">
+              </div>
+
             </div>
 
           </div>
